# sqlmodel_crud

./: .gitignore  .sqlmodel-crud.toml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
docs/: API.md  database_config_issue.md
examples/: advanced_usage.py  async_crud_base_usage.py  async_usage.py  basic_usage.py  mixin_usage.py
examples/code_generation/: README.md  construction_quantity.py  divisional_work.py  generate_code.py  location.py  quota.py  resource.py  test_generated_crud.py  unit_project.py  user_model.py
src/sqlmodel_crud/: __init__.py  base.py  cli.py  config.py  database.py  detector.py  exceptions.py  generator.py  path_resolver.py  scanner.py  terminal_output.py  types.py
src/sqlmodel_crud/templates/: config.py.j2  crud.py.j2  data_init.py.j2  database.py.j2  schemas.py.j2
tests/: conftest.py  test_async_base.py  test_base.py  test_cli.py  test_config.py  test_database.py  test_detector.py  test_exceptions.py  test_generator.py  test_path_resolver.py  test_scanner.py  test_soft_delete.py
